; ModuleID = '/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_mdstat.c_make_chart_obsolete.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_mdstat.c_make_chart_obsolete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"mdstat.%s_%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @make_chart_obsolete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @make_chart_obsolete(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [51 x i8], align 16
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32* null, i32** %6, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i8*, i8** %4, align 8
  %11 = icmp ne i8* %10, null
  br label %12

12:                                               ; preds = %9, %2
  %13 = phi i1 [ false, %2 ], [ %11, %9 ]
  %14 = zext i1 %13 to i32
  %15 = call i64 @likely(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %32

17:                                               ; preds = %12
  %18 = getelementptr inbounds [51 x i8], [51 x i8]* %5, i64 0, i64 0
  %19 = load i8*, i8** %3, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @snprintfz(i8* %18, i32 50, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* %19, i8* %20)
  %22 = getelementptr inbounds [51 x i8], [51 x i8]* %5, i64 0, i64 0
  %23 = call i32* @rrdset_find_byname_localhost(i8* %22)
  store i32* %23, i32** %6, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = ptrtoint i32* %24 to i32
  %26 = call i64 @likely(i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %17
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @rrdset_is_obsolete(i32* %29)
  br label %31

31:                                               ; preds = %28, %17
  br label %32

32:                                               ; preds = %31, %12
  ret void
}

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @snprintfz(i8*, i32, i8*, i8*, i8*) #1

declare dso_local i32* @rrdset_find_byname_localhost(i8*) #1

declare dso_local i32 @rrdset_is_obsolete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
